--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "pandas>=3.0.1",
+    "pyarrow>=23.0.1",
     "requests>=2.32.5",
 ]
