--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "duckdb>=1.4.4",
     "pandas>=3.0.1",
     "pyarrow>=23.0.1",
     "requests>=2.32.5",
