--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "duckdb>=1.4.4",
+    "faiss-cpu>=1.13.2",
+    "openai>=2.23.0",
     "pandas>=3.0.1",
     "pyarrow>=23.0.1",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "sentence-transformers>=5.2.3",
 ]
